--- a/references.bib
+++ b/references.bib
@@ -40,11 +40,15 @@
 }
 
 === Created manually ===
-@misc{alberts1998softwaredynamicgraph,
+@inproceedings{alberts1998softwaredynamicgraph,
    author = {David Alberts and Giuseppe Cattaneo and Umberto Nanni
       and Christos D. Zaroliagis},
    title = {A Software Library of Dynamic Graph Algorithms},
    year = {1998},
+   booktitle = {Proceedings of Workshop on Algorithms and Experiments
+      (ALEX-98)},
+   pages = {129--136},
+   address = {University of Trento, Trento, Italy},
 }
 
 === From http://www.roboticsproceedings.org/rss03/p30.html ===
@@ -1413,6 +1417,14 @@
    year = {2004},
    publisher = {MIT Press},
    url = {http://papers.nips.cc/paper/2382-ara-anytime-a-with-provable-bounds-on-sub-optimality.pdf}
+}
+
+@misc{likhachev2008sbpl,
+   author = {Maxim Likhachev},
+   title = {Search-{B}ased {P}lanning {L}ibrary ({SBPL})},
+   year = 2008,
+   howpublished = "\url{https://github.com/sbpl/sbpl/}",
+   note = {[Online; accessed 2016-Aug-10]},
 }
 
 === From dl.acm.org ===
