--- a/thesis-ch02-roadmaps.tex
+++ b/thesis-ch02-roadmaps.tex
@@ -314,7 +314,7 @@ algorithms;
 there is no mechanism explicitly biasing them to select
 low-cost paths.
 \marginnote{We talk about this tradeoff in detail
-in Chapter~\ref{chap:lemur}.}
+in Chapter~\ref{chap:utility}.}
 Therefore, solutions found tend to be of low quality,
 and they are customarily optimized using a path shortcutting
 algorithm.
