--- a/thesis-ch03-lazysp.tex
+++ b/thesis-ch03-lazysp.tex
@@ -162,6 +162,7 @@ $w : E \rightarrow [0,+\infty]$,
 the length of the path with respect to $w$ is then:
 \begin{equation}
    \mbox{len}(p, w) = \sum_{e \in p} w(e).
+   \label{eqn:lazysp:len-definition}
 \end{equation}
 Given a single-pair planning query
 $u: (v_{\ms{start}}, v_{\ms{goal}})$
