--- a/thesis.tex
+++ b/thesis.tex
@@ -168,7 +168,7 @@ Lydia Kavraki, Rice University\\
 
 \maketitle
 
-%\begin{abstract}
+% begin abstract
 \begin{fullwidth}
 \begin{adjustwidth}{1in}{1in}
 
@@ -238,14 +238,14 @@ on multiple robotic platforms,
 in applications from home table clearing
 to remote disaster response.
 We also provide open-source implementations of our algorithms.
+% end abstract
 
 \cdnote{Add acknowledgements!}
 
 \end{adjustwidth}
 \end{fullwidth}
-%\end{abstract}
 
-% \tableofcontents
+\tableofcontents
 
 \include{thesis-ch01-intro}
 \include{thesis-ch02-roadmaps}
