--- a/figs/ibid-intro-focus-incremental.tex
+++ b/figs/ibid-intro-focus-incremental.tex
@@ -18,9 +18,9 @@
    % reduced step-2 subset
    \begin{scope}
       \clip (1.5,0.0) circle (2.05);
-      \fill[black!5] (2.3,0.5) -- (3.55,1.0) -- (3.55,-0.4) -- (2.3,-0.2) -- cycle;
-      \draw (2.3,0.5) -- (3.55,1.0);
-      \draw (3.55,-0.4) -- (2.3,-0.2);
+      \fill[black!10] (2.3,0.5) -- (3.55,1.0) -- (3.55,-0.4) -- (2.3,-0.2) -- cycle;
+      \draw[black!40] (2.3,0.5) -- (3.55,1.0);
+      \draw[black!40] (3.55,-0.4) -- (2.3,-0.2);
    \end{scope}
    
    % initial search boundary
@@ -28,7 +28,7 @@
 \end{scope}
 
 % new obstacle
-\draw[fill=black!20,dashed] (2.3,-0.2) rectangle (2.7,0.5);
+\draw[fill=black!30,densely dashed] (2.3,-0.2) rectangle (2.7,0.5);
 
 \fill[black] (1.5,0.0) circle (0.05);
 \node at (1.35,-0.25) {$s$};
@@ -39,7 +39,7 @@
 \draw (1.5,0.0) -- (3.5,0.0);
 
 % new path
-\draw (1.5,0.0) -- (2.25,-0.25) -- (2.75,-0.25) -- (3.5,0.0);
+\draw[thick,densely dashed] (1.5,0.0) -- (2.25,-0.3) -- (2.75,-0.3) -- (3.5,0.0);
 
 % border
 \draw[black!10] (0.0,-1.3) rectangle (5.0,1.3);
