--- a/references.bib
+++ b/references.bib
@@ -514,6 +514,20 @@
    url = {http://dx.doi.org/10.1287/opre.17.3.395},
 }
 
+=== From http://www.sciencedirect.com/science/article/pii/S000437020900068X ===
+@article{ebendt2009weightedastarunified,
+   author = {R{\"u}diger Ebendt and Rolf Drechsler},
+   title = {Weighted A* search -- unifying view and application},
+   journal = {Artificial Intelligence},
+   year = {2009},
+   volume = {173},
+   number = {14},
+   pages = {1310--1342},
+   issn = {0004-3702},
+   doi = {http://dx.doi.org/10.1016/j.artint.2009.06.004},
+   url = {http://www.sciencedirect.com/science/article/pii/S000437020900068X},
+}
+
 === Manual ===
 @incollection{eppstein1999dynamic,
    author = {Eppstein, D and Galil, Z and Italiano, GF},
@@ -1973,8 +1987,8 @@
    title = {Manipulation Planning with Probabilistic Roadmaps},
    journal = {The International Journal of Robotics Research},
    volume = {23},
-   number = {7-8},
-   pages = {729-746},
+   number = {7--8},
+   pages = {729--746},
    year = {2004},
    doi = {10.1177/0278364904045471},
    url = {http://ijr.sagepub.com/content/23/7-8/729.abstract},
@@ -2024,6 +2038,20 @@
    month = may,
    pages = {639-646},
    doi = {10.1109/ICRA.2014.6906922},
+}
+
+=== From IEEE Xplore ===
+@inproceedings{starek2015bfmtstar,
+   author = {J. A. Starek and J. V. Gomez and E. Schmerling
+      and L. Janson and L. Moreno and M. Pavone},
+   booktitle = {Intelligent Robots and Systems (IROS),
+      2015 IEEE/RSJ International Conference on},
+   title = {An Asymptotically-Optimal Sampling-Based Algorithm for
+      Bi-directional Motion Planning},
+   year = {2015},
+   month = sep,
+   pages = {2072--2078},
+   doi={10.1109/IROS.2015.7353652},
 }
 
 === inproceedings CiteSeer ===
