--- a/thesis-ch02-roadmaps.tex
+++ b/thesis-ch02-roadmaps.tex
@@ -129,6 +129,7 @@ We give a brief review of approaches to motion planning that rely
 on discretizations of the configuration space.
 
 \subsection{Building Graphs in C-Space}
+\label{subsec:roadmaps:building-graphs}
 
 The formulation of motion planning via the configuration space
 raises the question:
@@ -409,7 +410,8 @@ Lazy validity checking has been exploited
 in roadmap methods such as the Lazy PRM
 \citep{bohlin2000lazyprm, hauser2015lazy},
 search methods such as Lazy Weighted A* \citep{cohen2014narms},
-and methods which bridge the two such as FMT* \citep{janson2015fmtstar}.
+and methods which bridge the two such as FMT* \citep{janson2015fmtstar}
+and BFMT* \citep{starek2015bfmtstar}.
 We discuss laziness in graph search comprehensively
 in Chapter~\ref{chap:lazysp}
 
