--- a/thesis-ch07-discussion.tex
+++ b/thesis-ch07-discussion.tex
@@ -1,1 +1,11 @@
 \chapter{Discussion}
+
+\paragraph{Task and motion planning.}
+Other recent work has married symbolic reasoning with geometric planning
+for tasks with multiple subtasks
+as multi-modal planning \citep{hauser2010multi},
+temporal logic \citep{bhatia2010temporalgoals},
+or hierarchical or bridged representations and interfaces
+\citep{cambon2009hybrid}, \citep{gravot2005asymov},
+\citep{srivastava2014taskmotion}.
+
